remove CapabilityWandAbility